
February 6, 2026: Version 3.0.0 - Level Pages & Dynamic Content
    Added subpages for each level with a video, leaderboard, and other info
    Level cards on the home page now are dynamically displayed based off listData.js (had to do manually before)
    Added scale animation when hover over level on home page
    Fastest time on level card now displays based on #1 fastest time
    Placed WIGGLECORE at #19 below Renewal and above UFO Funk
    Placed big yahu challenge x at #17 above black man chamber and below spam challenge 1
    Placed DOG MUNCHER CORRIDOR at #19 above Renewal and below black man chamber

February 7, 2026: Version 3.0.1 - List placements & more
    Placed SuperMPREGixyWorld at #27 above TOOMDUDUFOIGDPCLBM and below NullU
    Placed 200mg Ufombien at #22 above average udufopcl level and below WIGGLECORE
    Future UFO lowered to #25 above zimbabwe and below le funky ufo level
    Added Astatine16 lament completion

February 9, 2026: Version 3.1.0 - Level Tags, Badges, and Cake!
    Added 1 year anniversary of UDUFOPCL celebration
    New font: Poppins
    Added level tags
    Added ability to add level badges
    Added level ID on level page
    Added discord link under leaderboard
    Placed nonbinaryU at #17 above THE Challenge X and below spam challenge 1
    Placed jimbabwe 31 jaleng at #29 above SuperAwesomeIxyWorld and below NullU

February 10, 2026: Version 3.1.1 - List placement + other stuff idk
    Placed spectralabyrinth #7 above run from emoji9 and below blUDUFObath. This pushes le funky ufo level out of the top 25 (again??)
    Note: there is no fucking way ts is top 7 :sob:
    Awarded the first ever level badges!
    Awarded BlUDUFObath with a BRONZE ufo badge for great design
    Awarded FALLEN ANGEL with a BRONZE ufo badge for great design
    Updated some level tags
    Added ItsNoobe mangoa completion

To do:
    Rules/About Page
    Upcoming levels
    Open verifications
    Skillsets (kinda done)